testsuite/tests/interpreter_errors/positionnal_after_named/test.out
main.adb
script:3:11: error: Positional argument after named argument
3 | add(x=21, 21)
  |           ^^ 

